[package]
name = "blinc_gltf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "glTF 2.0 loader for Blinc — maps meshes, materials, nodes, skins, and animations into blinc_core types"
repository = "https://github.com/project-blinc/blinc_gltf"
readme = "README.md"
rust-version = "1.75"
keywords = ["gltf", "3d", "loader", "blinc"]
categories = ["rendering::data-formats", "graphics"]

# Standalone package — not a member of the Blinc workspace. Lives under
# `/packages/` which is gitignored and workspace-excluded.

[dependencies]
# Pinned `git` deps on the Blinc upstream. Cargo doesn't allow `path`
# alongside `git` in the same entry, so consumers wanting to develop
# this crate against a local Blinc checkout should add a `[patch]`
# table in their workspace `Cargo.toml`:
#
#     [patch."https://github.com/project-blinc/Blinc.git"]
#     blinc_core = { path = "crates/blinc_core" }
#     blinc_canvas_kit = { path = "crates/blinc_canvas_kit" }
#     blinc_platform = { path = "crates/blinc_platform" }
#
# Bump these revs in lockstep with the Blinc repo's `main`.
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b" }
blinc_canvas_kit = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b" }
# Optional cross-platform asset loader integration. Gated behind the
# `platform-assets` feature so pure-desktop users can keep depending
# on `std::fs` via `load_path` without pulling in the platform crate.
blinc_platform = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b", optional = true }

# Upstream glTF parser. Covers JSON + .glb, accessor decoding, external
# buffer loading, image decoding via optional features.
#
# Features:
# - `utils`       — accessor iteration helpers (Positions, Normals, Indices, ...)
# - `names`       — preserve asset names (node, mesh, animation)
# - `extras`      — keep `extras` JSON blobs as opaque `RawValue`
# - `KHR_materials_unlit` — unlit extension parse support
gltf = { version = "1.4", default-features = false, features = [
    "utils",
    "names",
    "extras",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "import",
] }

# Image decoding for textures. glTF embeds images as PNG/JPEG bytes
# (data URIs or external references) — `image` turns those into raw
# RGBA that `TextureData` expects.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Base64 decoder for glTF `data:...;base64,...` URIs. The upstream
# `gltf` crate uses this internally but doesn't re-export it; we need
# it directly for the cross-platform asset loader path that can't use
# `gltf::import` (which is filesystem-bound).
base64 = "0.22"

thiserror = "2.0"

[features]
default = []
# Enables `load_asset()` — cross-platform glTF loading via the global
# `blinc_platform::assets` loader. Off by default so the crate stays a
# thin wrapper around the `gltf` parser for callers who want their own
# asset pipeline.
platform-assets = ["dep:blinc_platform"]
