[package]
name = "blinc_gltf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "glTF 2.0 loader for Blinc — maps meshes, materials, nodes, skins, and animations into blinc_core types"
repository = "https://github.com/project-blinc/blinc_gltf"
readme = "README.md"
rust-version = "1.75"
keywords = ["gltf", "3d", "loader", "blinc"]
categories = ["rendering::data-formats", "graphics"]

# Standalone package — not a member of the Blinc workspace. Lives under
# `/packages/` which is gitignored and workspace-excluded.

[dependencies]
# Pinned `git` deps on the Blinc upstream. Cargo doesn't allow `path`
# alongside `git` in the same entry, so consumers wanting to develop
# this crate against a local Blinc checkout should add a `[patch]`
# table in their workspace `Cargo.toml`:
#
#     [patch."https://github.com/project-blinc/Blinc.git"]
#     blinc_core = { path = "crates/blinc_core" }
#     blinc_canvas_kit = { path = "crates/blinc_canvas_kit" }
#     blinc_platform = { path = "crates/blinc_platform" }
#
# Bump these revs in lockstep with the Blinc repo's `main`.
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "63dbf7735f37a778fe9150426bbe0f1f69da7117" }
blinc_canvas_kit = { git = "https://github.com/project-blinc/Blinc.git", rev = "63dbf7735f37a778fe9150426bbe0f1f69da7117" }
# Optional cross-platform asset loader integration. Gated behind the
# `platform-assets` feature so pure-desktop users can keep depending
# on `std::fs` via `load_path` without pulling in the platform crate.
blinc_platform = { git = "https://github.com/project-blinc/Blinc.git", rev = "63dbf7735f37a778fe9150426bbe0f1f69da7117", optional = true }

# Upstream glTF parser. Covers JSON + .glb, accessor decoding, external
# buffer loading, image decoding via optional features.
#
# Features:
# - `utils`       — accessor iteration helpers (Positions, Normals, Indices, ...)
# - `names`       — preserve asset names (node, mesh, animation)
# - `extras`      — keep `extras` JSON blobs as opaque `RawValue`
# - `KHR_materials_unlit` — unlit extension parse support
gltf = { version = "1.4", default-features = false, features = [
    "utils",
    "names",
    "extras",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    # Legacy spec-gloss workflow (older glTF exporters, Sketchfab, Poly
    # Haven archive). Enabling the feature both teaches the parser to
    # accept the extension in `extensionsRequired` (otherwise load
    # errors with `Unsupported`) and exposes
    # `Material::pbr_specular_glossiness()` for our conversion to the
    # metallic-roughness channels that the mesh pipeline consumes.
    "KHR_materials_pbrSpecularGlossiness",
    "import",
] }

# Image decoding for textures. glTF embeds images as PNG/JPEG bytes
# (data URIs or external references) — `image` turns those into raw
# RGBA that `TextureData` expects.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Base64 decoder for glTF `data:...;base64,...` URIs. The upstream
# `gltf` crate uses this internally but doesn't re-export it; we need
# it directly for the cross-platform asset loader path that can't use
# `gltf::import` (which is filesystem-bound).
base64 = "0.22"

thiserror = "2.0"

# Structured logging for load-time diagnostics (e.g. per-material
# BLEND demotion decisions). Apps already configure `tracing` via
# `tracing-subscriber`; the crate emits only at `debug` so production
# runs don't pay for it unless `RUST_LOG` opts in.
tracing = "0.1"

# Pure-Rust Texture Block Compression encoder (BC1 / BC3 / BC4).
# Opt-in via the `bc-encode` feature — off by default because BC
# encoding adds ~50-150 ms per 2K × 2K texture to async load. The
# feature's payoff is ~4-8× smaller GPU VRAM for material textures
# (see `docs/book/src/advanced/3d-rendering.md`). Pure Rust so the
# crate still compiles for wasm32 targets; the renderer's runtime
# capability probe decides whether to actually upload the BC
# payload or fall back to Rgba8.
tbc = { version = "0.3", optional = true }

[features]
default = []
# Enables `load_asset()` — cross-platform glTF loading via the global
# `blinc_platform::assets` loader. Off by default so the crate stays a
# thin wrapper around the `gltf` parser for callers who want their own
# asset pipeline.
platform-assets = ["dep:blinc_platform"]
# Enables runtime BC1/BC3/BC4 encoding of decoded glTF textures,
# feeding `blinc_gpu::GpuImage::from_compressed`. Diffuse textures
# encode to BC1 (opaque) or BC3 (alpha) based on the alpha
# histogram used by the existing demotion heuristic; occlusion
# textures encode to BC4. Normal maps and metallic-roughness stay
# Rgba8 in this revision — BC5 support lands separately.
bc-encode = ["dep:tbc"]
